--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -94,10 +94,18 @@ a {
         }
 /*footer*/
 footer {
+    background-color: #232C25;
+    text-align: centre;
+    font-size: 1rem;
+    color: #eaeaea;
     padding: 1.5rem 0 1.5rem 0;
     margin-top:2rem;
     border-top:1px solid #101010;
     }
+footer p{
+    max-width: 40%;
+    margin: auto;
+}
 /*Main*/
 main{
     margin-bottom: 2.5rem;
