--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -30,21 +30,25 @@ h1,h2,h3,h4,h5,h6 {
 h1 {
     font-size: 4.25rem;
     margin-bottom: 2rem;
+    text-align: center;
 }
 
 h2 {
     font-size: 2.25rem;
     margin-bottom: .5rem;
+    text-align: center;
 }
 
 h3 {
     font-size: 2rem;
     margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 h4 {
     font-size: 1.75;
     margin-bottom: 0.5rem;
+    text-align: center;
 }
 
 /*paragraphs*/
@@ -57,15 +61,9 @@ p {
     padding-left: 24rem;
     padding-right: 24rem;
     font-style: normal;
+    text-align: center;
 }
-h3 {
-font-size: 2rem;
-margin-bottom: 0.5rem;
-}
-h4 {
-font-size: 1.75rem;
-margin-bottom: 0.5rem;
-}
+
 /*List format*/
 ul {
     list-style: disc outside;
@@ -95,17 +93,14 @@ a {
 /*footer*/
 footer {
     background-color: #232C25;
-    text-align: centre;
+    text-align: left;
     font-size: 1rem;
     color: #eaeaea;
-    padding: 1.5rem 0 1.5rem 0;
+    padding: 1rem 0 1rem 0;
     margin-top:2rem;
     border-top:1px solid #101010;
     }
-footer p{
-    max-width: 40%;
-    margin: auto;
-}
+
 /*Main*/
 main{
     margin-bottom: 2.5rem;
@@ -117,9 +112,36 @@ img {
     width:100%;
     height:auto;
     border:1px solid #101010;
-    margin-bottom: 2rem;
     }
 /*Align Content*/
 .center {
-    text-align: center;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 50%;
   }     
+/*colour blocking*/
+.lummorn{
+    padding:3rem 0 3rem 0;
+    background-color: #8C371E	;
+    margin-bottom: 2.5rem;
+    color: #eaeaea;
+}
+.market{
+    padding:3rem 0 3rem 0;
+    background-color: #eaeaea	;
+    margin-bottom: 2.5rem;
+    color: #232C25;
+}
+.street{
+    padding:3rem 0 3rem 0;
+    background-color: #FCD345	;
+    margin-bottom: 2.5rem;
+    color: #232C25;
+}
+.about{
+    padding:3rem 0 3rem 0;
+    background-color: #eaeaea	;
+    margin-bottom: 2.5rem;
+    color: #232C25;
+}
