--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -1,4 +1,5 @@
 * {
+    box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-size:100%;
@@ -17,12 +18,11 @@ body {
 }
 /*Adding google fonts*/
 
-@import url('https://fonts.googleapis.com/css2?family=Cinzel+Decorative:wght@400;700;900&family=Ledger&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Cinzel+Decorative&family=Ledger&display=swap');
 
 /*Default Headings styles*/
 h1,h2,h3,h4,h5,h6 {
-    font-family: 'Cinzel', Georgia, 'Times New Roman', Times,
-    serif;
+    font-family: 'Cinzel', serif;
     line-height: 1.1;
     font-weight: 700;
 }
@@ -30,30 +30,29 @@ h1,h2,h3,h4,h5,h6 {
 h1 {
     font-size: 4.25rem;
     margin-bottom: 2rem;
-    text-align: center;
 }
 
 h2 {
     font-size: 2.25rem;
     margin-bottom: .5rem;
-    text-align: center;
+
 }
 
 h3 {
     font-size: 2rem;
     margin-bottom: 0.5rem;
-    text-align: center;
+
 }
 
 h4 {
     font-size: 1.75;
     margin-bottom: 0.5rem;
-    text-align: center;
+
 }
 
 /*paragraphs*/
 p {
-    font-family: 'Ledger', Georgia, "Times New Roman", serif;
+    font-family: 'Ledger', serif;
     font-weight: 400;
     line-height: 1.5;
     font-size: 1.125rem;
@@ -61,7 +60,6 @@ p {
     padding-left: 24rem;
     padding-right: 24rem;
     font-style: normal;
-    text-align: center;
 }
 
 /*List format*/
@@ -71,25 +69,20 @@ ul {
     margin-left: 1.25rem;
     }
     ul li {
-    font-family: "Ledger", Arial, Helvetica, sans-serif;
-    font-weight: 400;
-    line-height: 1.5;
-    font-size: 1.125rem;
-    margin-bottom: .5rem;
+    font-family: "Ledger", serif;
+    font-weight: 500;
+    font-size: 16px;
+    color: #eaeaea;
+    text-decoration: none;
     }
 /* hyperlinks */
 a {
     font-family:inherit;
     font-size:inherit;
     line-height: inherit;
-    color: blue;
+    color: #232C25;
     }
-    a:hover {
-        color:blue;
-        }
-        a:visited {
-        color:blueviolet;
-        }
+ 
 /*footer*/
 footer {
     background-color: #232C25;
@@ -113,13 +106,6 @@ img {
     height:auto;
     border:1px solid #101010;
     }
-/*Align Content*/
-.center {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    width: 50%;
-  }     
 /*colour blocking*/
 .lummorn{
     padding:3rem 0 3rem 0;
@@ -146,16 +132,3 @@ img {
     color: #232C25;
 }
 /*Header*/
-header{
-    background-color: #232C25;
-    padding:1.5rem 0;
-    text-align: left;
-    }
-    header p.logo{
-    font-weight: 700;
-    color: #eaeaea;
-    margin-bottom:0;
-    font-size:1.5rem;
-    line-height: 1.1;
-    
-    }
