--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -102,10 +102,9 @@ main{
 
 /* images*/
 img {
-    max-width: 1020px;
     width: 100%;
-    height:auto;
-    border:1px solid #101010;
+    height:800px;
+    object-fit: cover;
     }
 
 /*colour blocking*/
