--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -138,9 +138,42 @@ header{
     padding: 0;
     background-color: #232C25;
     color: #eaeaea;
+    overflow: hidden;
 
 }
-.headprg{
+.headerlogo {
     margin: 0;
-    padding: 0;
-}
+    padding: 24px 24px;
+    font-size: 25px;
+    font-weight: bold;
+  }
+  .header a {
+    float: left;
+    color: #eaeaea;
+    text-align: center;
+    padding: 20px 10px;
+    text-decoration: none;
+    font-size: 18px; 
+    line-height: 25px;
+    border-radius: 4px;
+  }
+  .header a:hover {
+    background-color: #3A493D;
+    color: #eaeaea;
+  }
+  
+  .header-right {
+    float: right;
+  }
+  @media screen and (max-width: 500px) {
+    .header a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+    
+    .header-right {
+      float: none;
+    }
+  }
+  
