--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -1,3 +1,7 @@
+/*Adding google fonts*/
+
+@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Cinzel+Decorative&family=Ledger&display=swap');
+
 * {
     padding: 0;
     margin: 0;
@@ -8,16 +12,13 @@
 body {
     color:#101010;
     border-color: #101010;
-    background-color: #eaeaea;
+    background-color: #ffffff;
 }
 /*content container*/
 .container {
     max-width: 1020px;
     margin: 0 auto 0 auto;
 }
-/*Adding google fonts*/
-
-@import url('https://fonts.googleapis.com/css2?family=Cinzel&family=Cinzel+Decorative&family=Ledger&display=swap');
 
 /*Default Headings styles*/
 h1,h2,h3,h4,h5,h6 {
@@ -56,8 +57,8 @@ p {
     line-height: 1.5;
     font-size: 1.125rem;
     margin-bottom: 1.5rem;
-    padding-left: 16rem;
-    padding-right: 16rem;
+    padding-left: 3rem;
+    padding-right: 3rem;
     font-style: normal;
 }
 
@@ -91,7 +92,6 @@ footer {
     font-size: 1rem;
     color: #eaeaea;
     padding: 70px 0 70px 0;
-    box-sizing: border-box;
     text-align: center;
     }
 
@@ -103,7 +103,7 @@ main{
 /* images*/
 img {
     width: 100%;
-    height:650px;
+    height:600px;
     }
 
 /*colour blocking*/
@@ -112,39 +112,45 @@ img {
     padding:3rem 0 3rem 0;
     background-color: #eaeaea	;
     color: #232C25;
+
 }
 .lummorn{
     text-align: center;
     padding:3rem 0 3rem 0;
     background-color: #FCD345	;
     color: #232C25;
+
 }
 .market{
     text-align: center;
     padding:3rem 0 3rem 0;
     background-color: #eaeaea	;
     color: #232C25;
+
 }
 .street{
     text-align: center;
     padding:3rem 0 3rem 0;
     background-color: #FCD345	;
     color: #232C25;
+
 }
 .furtherreading{
     text-align: center;
     padding:3rem 0 3rem 0;
     background-color: #eaeaea	;
     color: #232C25;
+
 }
 /*Header*/
 .title{
     background-color: #232C25;
     color: #eaeaea;
-    font-weight: 600px;
+    font-weight: 400;
     font-size: 4.5rem;
     text-align: center;
     padding: 2.5rem;
+    margin: 0;
 
 }
 /*Nav bar*/
@@ -171,5 +177,18 @@ ul {
   li a:hover {
     background-color: #3A493D;
   }
-
+/*css grids*/
+.grid {
+    display: flex;
+    gap:24px;
+    flex-direction: row;
+    height: auto;
+    }
+/* CSS grids column widths */
+.grid-col-third {
+    flex-basis: 33.33%;
+    }
+    .grid-col-twoThirds {
+    flex-basis: 66.66%;
+    }
   
