--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -33,19 +33,19 @@ h1 {
 }
 
 h2 {
-    font-size: 2.25rem;
+    font-size: 2rem;
     margin-bottom: .5rem;
 
 }
 
 h3 {
-    font-size: 2rem;
+    font-size: 1.5rem;
     margin-bottom: 0.5rem;
 
 }
 
 h4 {
-    font-size: 1.75;
+    font-size: 1;
     margin-bottom: 0.5rem;
 
 }
@@ -57,8 +57,8 @@ p {
     line-height: 1.5;
     font-size: 1.125rem;
     margin-bottom: 1.5rem;
-    padding-left: 3rem;
-    padding-right: 3rem;
+    padding-left: 2rem;
+    padding-right: 2rem;
     font-style: normal;
 }
 
@@ -103,7 +103,7 @@ main{
 /* images*/
 img {
     width: 100%;
-    height:600px;
+    height:auto;
     }
 
 /*colour blocking*/
