--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -85,7 +85,7 @@ a {
     font-family:inherit;
     font-size:inherit;
     line-height: inherit;
-    color: #F8F5D2;
+    color: #F3F3E0;
     }
  
 /*footer*/
@@ -95,7 +95,7 @@ footer {
     overflow: hidden;
     background-color: #1A372A;
     font-size: 1rem;
-    color: #F8F5D2;
+    color: #F3F3E0;
     padding: 70px 0 70px 0;
     text-align: center;
     }
@@ -114,7 +114,7 @@ img {
 /*colour blocking*/
 .intro{
     text-align: center;
-    background-color: #F8F5D2;
+    background-color: #F3F3E0;
     padding:3rem 10rem 3rem 10rem;
     color: #0F291D;
     margin-bottom: 5rem;
@@ -125,12 +125,12 @@ img {
     padding: 2rem 2rem 0.5rem 2rem;
     font-size: 200%;
     font-weight: bolder;
-    color: #F8F5D2;
+    color: #F3F3E0;
 }
 .about{
     text-align: center;
     padding:3rem;
-    background-color: #F8F5D2	;
+    background-color: #F3F3E0;
     color: #0F291D;
     margin: 3rem 0 0 0;
 
@@ -139,21 +139,21 @@ img {
     margin-top: 5rem;
     text-align: center;
     padding:3rem 0 3rem 0;
-    background-color: #F8F5D2	;
+    background-color: #F3F3E0;
     color: #0F291D;
 
 }
 .market{
     text-align: center;
     padding:3rem 0 3rem 0;
-    background-color: #F8F5D2	;
+    background-color: #F3F3E0;
     color: #0F291D;
 
 }
 .street{
     text-align: center;
     padding:3rem 0 3rem 0;
-    background-color: #F8F5D2	;
+    background-color: #F3F3E0	;
     color: #0F291D;
 
 }
@@ -161,13 +161,13 @@ img {
     text-align: center;
     padding:8rem 10rem;
     background-color: #0F291D	;
-    color: #F8F5D2;
+    color: #F3F3E0;
 
 }
 /*Header*/
 .title{
     background-color: #232C25;
-    color: #F8F5D2;
+    color: #F3F3E0;
     font-weight: 400;
     font-size: 4.5rem;
     text-align: center;
@@ -191,7 +191,7 @@ ul {
   
   li a {
     display: inline-block;
-    color: #F8F5D2;
+    color: #F3F3E0;
     text-align: center;
     padding: 14px 16px;
     text-decoration: none;
@@ -216,5 +216,5 @@ ul {
     }
 /*Dividers*/
 hr.solid {
-    border-top: 3px solid #F8F5D2;
+    border-top: 3px solid #F3F3E0;
   }
