--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -115,7 +115,7 @@ img {
 .intro{
     text-align: center;
     background-color: #F3F3E0;
-    padding:3rem 10rem 3rem 10rem;
+    padding:3rem 6rem;
     color: #0F291D;
     margin-bottom: 5rem;
 }
@@ -132,7 +132,7 @@ img {
     padding:3rem;
     background-color: #F3F3E0;
     color: #0F291D;
-    margin: 3rem 0 0 0;
+    margin: 3rem 0 5rem 0;
 
 }
 .lummorn{
@@ -159,7 +159,7 @@ img {
 }
 .furtherreading{
     text-align: center;
-    padding:8rem 10rem;
+    padding:8rem 6rem;
     background-color: #0F291D	;
     color: #F3F3E0;
 
@@ -218,3 +218,41 @@ ul {
 hr.solid {
     border-top: 3px solid #F3F3E0;
   }
+
+/* media queries */
+@media only screen and (max-width:1068px) {
+    .container {
+    margin: 0 24px 0 24px;
+    }
+    }
+@media only screen and (max-width: 768px) {
+    }
+@media only screen and (max-width: 600px) {
+    .container {
+    margin: 0 16px 0 16px;
+    }
+    h1{
+        font-size: 2.25rem;
+        margin-bottom: 1rem;
+        }
+        h2{
+        font-size: 1.875rem;
+        }
+        h3{
+        font-size: 1.5rem;
+        }
+        h4{
+        font-size: 1.25rem;
+        }
+        p{
+            font-size: 1rem;
+            margin-bottom: 1rem;
+            }
+            ul {
+                margin-bottom: 0;
+                }
+                ul li {
+                font-size: 1rem;
+                ;
+                }
+    }
