--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -32,10 +32,9 @@ h1,h2,h3,h4,h5,h6 {
 /*Adding specific styles*/
 h1 {
     font-size: 4.25rem;
-    margin-bottom: 2rem;
+    font-weight: bolder;
+    margin-top: 2rem;
     margin-bottom: 1.5rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
 }
 
 h2 {
@@ -150,10 +149,10 @@ img {
 }
 .about{
     text-align: left;
-    padding:5rem 3rem;
+    padding:3rem 3rem;
     background-color: #F3F3E0;
     color: #0F291D;
-    margin:0;
+    margin: 0 0 5rem 0 ;
 
 }
 .lummorn{
@@ -244,6 +243,13 @@ hr.solid {
     border-top: 3px solid #F3F3E0;
   }
 
+
+
+
+
+
+
+
 /* media queries */
 @media only screen and (max-width:1068px) {
     .container {
@@ -333,6 +339,7 @@ hr.solid {
         font-size: 1rem;
         ;
     }
+
 }
 
 @media only screen and (max-width: 496px) {
