--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -303,6 +303,9 @@ hr.solid {
         margin-top: 1rem;
         margin-bottom: 1rem;
     }
+    .grid {
+        flex-direction: column;
+        }
 }
 
 
