--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -275,6 +275,9 @@ hr.solid {
         font-size: 1.15rem;
         margin-bottom: 1rem;
     }
+    .extract{
+        font-size: 1.65rem;
+    }
 
 
 }
@@ -294,6 +297,9 @@ hr.solid {
     p {
         font-size: 1.1rem;
         margin-bottom: 1rem;
+    }
+    .extract{
+        font-size: 1.6rem;
     }
 }
 
@@ -351,6 +357,9 @@ hr.solid {
     .furtherreading{
         padding: 1.5rem;
     }
+    .extract{
+        font-size: 1.4rem;
+    }
 
 }
 
@@ -384,6 +393,9 @@ hr.solid {
         font-size: 0.75rem;
         ;
     }
+    .extract{
+        font-size: 1.1rem;
+    }
 
 
 }
@@ -393,7 +405,7 @@ hr.solid {
         margin-bottom: 0.55rem;
     }
 
-    .extract h2 {
+    h2 {
         font-size: 0.75rem;
         margin-bottom: 0.75rem;
     }
@@ -426,6 +438,9 @@ hr.solid {
     }
     footer{
         padding: 2rem 1rem 1rem 1rem;
+    }
+    .extract{
+        font-size: 0.75rem;
     }
 
 
