--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -96,7 +96,24 @@ a {
     line-height: inherit;
     color: #F3F3E0;
     }
- 
+/*blockquote*/
+figure.quote {
+    border-left: 8px solid #fdc345;
+    padding: 1.5rem 0 1.5rem 2rem;
+    margin-bottom: 2rem;
+}
+
+figure.quote p {
+    margin-bottom: 0;
+}
+
+figure.quote blockquote {
+    margin-bottom: .5rem;
+}
+
+figure.quote figcaption p {
+    font-weight: 700;
+}
 /*footer*/
 footer {
     width: 100vw;
