--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -465,4 +465,22 @@ hr.solid {
     }
 
 }
-
+@media only screen and (max-width: 324px) {
+    h1 {
+        font-size: 1.2rem;
+        margin-bottom: 0.55rem;
+    }
+    .intro{
+        margin-bottom: 1rem;
+    }
+    .about{
+        padding: 2rem 0.5rem;
+        margin-bottom: 2rem;
+    }
+    .extract{
+        font-size: 0.75rem;
+    }
+    .lummorn{
+        margin-top: 2.5rem;
+    }
+}
