--- a/css/crocodiles.css
+++ b/css/crocodiles.css
@@ -116,13 +116,12 @@ figure.quote figcaption p {
 }
 /*footer*/
 footer {
-    width: 100vw;
-    display: inline-block;
-    overflow: hidden;
+    width: 100%;
+    align-content: center;
     background-color: #1A372A;
     font-size: 1rem;
     color: #F3F3E0;
-    padding: 70px 0 70px 0;
+    padding: 4rem 0 3rem 0;
     text-align: center;
     }
 
